assignment/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <picklist>
            <picklistValues>
                <fullName>B.E.</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Mtech</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year_of_experienced__c</fullName>
        <label>Year of experienced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>Experienced</fullName>
        <active>true</active>
        <label>Experienced</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fresher</fullName>
        <active>true</active>
        <label>Fresher</label>
    </recordTypes>
    <recordTypes>
        <fullName>Freshers</fullName>
        <active>true</active>
        <label>Freshers</label>
    </recordTypes>
</CustomObject>